--- a/public/404.html
+++ b/public/404.html
@@ -10,14 +10,16 @@
   <title>404 Page not found</title>
   
    
-    <link href="/im/css/nucleus.css?1518006671" rel="stylesheet">
-    <link href="/im/css/font-awesome.min.css?1518006671" rel="stylesheet">
-    <link href="/im/css/hybrid.css?1518006671" rel="stylesheet">
-    <link href="/im/css/featherlight.min.css?1518006671" rel="stylesheet">
-    <link href="/im/css/perfect-scrollbar.min.css?1518006671" rel="stylesheet">
-    <link href="/im/css/horsey.css?1518006671" rel="stylesheet">
-    <link href="/im/css/theme.css?1518006671" rel="stylesheet">
-    <link href="/im/css/hugo-theme.css?1518006671" rel="stylesheet">
+    <link href="/im/css/nucleus.css?1518010931" rel="stylesheet">
+    <link href="/im/css/font-awesome.min.css?1518010931" rel="stylesheet">
+    <link href="/im/css/hybrid.css?1518010931" rel="stylesheet">
+    <link href="/im/css/featherlight.min.css?1518010931" rel="stylesheet">
+    <link href="/im/css/perfect-scrollbar.min.css?1518010931" rel="stylesheet">
+    <link href="/im/css/horsey.css?1518010931" rel="stylesheet">
+    <link href="/im/css/theme.css?1518010931" rel="stylesheet">
+    <link href="/im/css/hugo-theme.css?1518010931" rel="stylesheet">
+    
+      <link href="/im/css/theme-red.css?1518010931" rel="stylesheet">
     
 <style type="text/css">
     :root #header + #content > #left > #rlblock_left {
