--- a/static/lab4/draw.html
+++ b/static/lab4/draw.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lab2</title>
+    <title>lab 4 draw</title>
     <link rel="stylesheet" href="draw.css">
   </head>
   <body>
-
+		<h3>You can draw lines here!</h3>
+    <canvas></canvas>
   </body>
+	<script type="text/javascript" src="draw.js"></script>
 </html>
