--- a/static/lab4/game.html
+++ b/static/lab4/game.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lab 4 draw</title>
-    <link rel="stylesheet" href="draw.css">
+    <title>lab 4 game</title>
+    <link rel="stylesheet" href="game.css">
   </head>
   <body>
-		<h3>You can draw lines here!</h3>
+		<h3 id="result">Just a little game! | Click to start</h3>
     <canvas></canvas>
   </body>
-	<script type="text/javascript" src="draw.js"></script>
+	<script type="text/javascript" src="game.js"></script>
 </html>
