updating the diary details

--- a/content/_index.html
+++ b/content/_index.html
@@ -6,6 +6,9 @@
 
 <h3>DIN16SP | 2018</h3>
 
+<h4>Lab pages can be browsed with the side menu on the left</h4>
+
+<h4>Source code for this website and labs can be found in the <a href="https://github.com/shajadi/im-portfolio">Github page</a>, Lab sources are located under "static" folder.</h4>
+
 </body>
 </html>
-
